--- a/dodawwanieSyganlu.ui
+++ b/dodawwanieSyganlu.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>269</width>
-    <height>188</height>
+    <height>0</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -45,9 +45,6 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
-        <widget class="QDoubleSpinBox" name="signal_a"/>
-       </item>
        <item row="1" column="0">
         <widget class="QLabel" name="label_3">
          <property name="text">
@@ -56,7 +53,10 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QDoubleSpinBox" name="signal_f"/>
+        <widget class="QDoubleSpinBox" name="doubleSpinBox_2"/>
+       </item>
+       <item row="0" column="1">
+        <widget class="QDoubleSpinBox" name="doubleSpinBox"/>
        </item>
       </layout>
      </widget>
