--- a/filter_type.ui
+++ b/filter_type.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>399</width>
-    <height>129</height>
+    <height>160</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -71,6 +71,13 @@
      <widget class="QDoubleSpinBox" name="filter_highcut">
       <property name="maximum">
        <double>2000000.989999999990687</double>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0" colspan="2">
+     <widget class="QDialogButtonBox" name="button_dialog">
+      <property name="standardButtons">
+       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
       </property>
      </widget>
     </item>
